# gallery

./: .gitignore  README.md  build.ps1  build.sh  docker-compose.yaml  imagehive.code-workspace  imgproxy.sh  justfile  micronaut-cli.yml  openapitools.json  package-lock.json  pom.xml  regenerate-code.ps1  regenerate-code.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml  ci.yml  maven.yml  sonar.yml
backend/: .gitignore  justfile  micronaut-cli.yml  pom.xml
frontend/: .eslintrc.cjs  .eslintrc.js  Dockerfile  justfile  package-lock.json  package.json  remix.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/app/: entry.client.tsx  entry.server.tsx  root.tsx
frontend/css/: app.css
imagehive-ai/: .dockerignore  .gitignore  Dockerfile  README.md  justfile  pyproject.toml  requirements.txt
imagehive-ai/imagehive_ai/: __init__.py  routes.py
imagehive-ai/services/: __init__.py  lavis.py  nltk.py  routes.py
imagehive-codegen/: justfile  pom.xml
imagehive-frontend/: .gitignore  .prettierignore  .prettierrc  package-lock.json  package.json  tailwind.config.js  vite.config.ts
imagehive-frontend/app/: entry.client.tsx  root.tsx
imagehive-frontend/src/: hooks.server.ts
lapis-service/: README.md  pyproject.toml
lapis-service/lapis_service/: __init__.py  service.py
lavis-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
lavis-service/lavis_service/: __init__.py  caption.py  service.py  tag.py
(+246 files in other folders)
